--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -89,7 +89,7 @@ $css-vars-map: (
         .label {
             position: absolute;
             left: 1em;
-            font-size: calc((var(--field-label-font-size) * 3) / 4);
+            font-size: calc(#{var(--field-label-font-size)} * 0.75);
             background-color: transparent;
             z-index: 5;
             white-space: nowrap;
@@ -160,7 +160,7 @@ $css-vars-map: (
     }
     &.is-floating-in-label {
         > .label {
-            --field-floating-indent: #{calc(#{var(--floating-in-height, #{$floating-in-height})} / 2 - (#{var(--size-large, #{$size-large})} * 3 / 4) / 2)};
+            --field-floating-indent: #{calc(#{var(--floating-in-height)} * 0.5 - (#{var(--size-large, #{$size-large})} * 0.75) * 0.5)};
             top: 0.25em;
 
             + .control {
@@ -194,7 +194,7 @@ $css-vars-map: (
                 &.taginput {
                     .taginput-container {
                         // 0.275em - 1px _taginput.scss
-                        padding-top: calc(var(--field-floating-indent) + (0.275em - 1px));
+                        padding-top: calc(#{var(--field-floating-indent)} + (0.275em - 1px));
                     }
                 }
                 &:not(.taginput) {
@@ -314,7 +314,7 @@ $css-vars-map: (
     }
     // fix Bulma 0.8.2
     &.is-loading::after {
-        top: calc(50% - (1em / 2));
-        right: calc((2.5em / 2) - .5em);
+        top: calc(50% - (1em * 0.5));
+        right: calc((2.5em * 0.5) - .5em);
     }
 }
