--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -44,7 +44,7 @@ $css-vars-map: (
     @include registerCSSVars($css-vars-map, $at-root)
 }
 
-@mixin slider-size() {
+@mixin slider-size {
 	$track-height: calc(#{var(--slider-size)} / #{var(--slider-thumb-to-track-ratio)});
 	$tick-height: calc(#{$track-height} * #{var(--slider-tick-to-track-ratio)});
 
@@ -64,7 +64,7 @@ $css-vars-map: (
     .b-slider-tick-label {
         font-size: var(--slider-mark-size);
         position: absolute;
-        top: calc(#{$track-height} / 2 + 2px);
+        top: calc((#{$track-height} * 0.5) + 2px);
         left: 50%;
         transform: translateX(-50%);
     }
